stargate/crates/graphql-parser/tests/snapshots/tests__query_kitchen_sink__parse_schema__unix.snap
---
source: graphql-parser/tests/__generated__tests.rs
expression: "format!(\"{}\\n---\\n{:#?}\", & input, & result)"
---
# Copyright (c) 2015-present, Facebook, Inc.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

query queryName($foo: ComplexType, $site: Site = MOBILE) {
  whoever123is: node(id: [123, 456]) {
    id ,
    ... on User @defer {
      field2 {
        id ,
        alias: field1(first:10, after:$foo,) @include(if: $foo) {
          id,
          ...frag
        }
      }
    }
    ... @skip(unless: $foo) {
      id
    }
    ... {
      id
    }
  }
}

mutation likeStory {
  like(story: 123) @defer {
    story {
      id
    }
  }
}

subscription StoryLikeSubscription($input: StoryLikeSubscribeInput) {
  storyLikeSubscribe(input: $input) {
    story {
      likers {
        count
      }
      likeSentence {
        text
      }
    }
  }
}

fragment frag on Friend {
  foo(size: $size, bar: $b, obj: {key: "value", block: """

      block string uses \"""

  """})
}

{
  unnamed(truthy: true, falsey: false, nullish: null),
  query
}

---
Err(
    ParseError(
        "Parse error at 56:1\nUnexpected `{[Punctuator]`\nExpected `end of input`\n",
    ),
)
